source controle problem

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>this is my first git hub project</h1>
     <h2>look mama i am using git hub</h2>
+    <h3>my source control showing that,</h3>
+    <h3>the folder currently open doesn't have a git repository.You can initialize a repository which will enable source control features powered by git.</h3>
 </body>
 </html>
