--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h3>my source control showing that,</h3>
     <h3>the folder currently open doesn't have a git repository.You can initialize a repository which will enable source control features powered by git.</h3>
     <p>any one please help me to get out of this problem.</p>
-    
+    <img src="problem.jpg" alt="">
+
 </body>
 </html>
