learning about second branch

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <h3>the folder currently open doesn't have a git repository.You can initialize a repository which will enable source control features powered by git.</h3>
     <p>any one please help me to get out of this problem.</p>
     <img src="problem.jpg" alt="">
+    <p>now i am in my second branch</p>
+    
 
 </body>
 </html>
