i created first branch

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h3>the folder currently open doesn't have a git repository.You can initialize a repository which will enable source control features powered by git.</h3>
     <p>any one please help me to get out of this problem.</p>
     <img src="problem.jpg" alt="">
-
+    <h1>now i am in my first branch</h1>
+    <p>i do it myself</p>
 </body>
 </html>
